--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,332 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/* contact */
 .b_glow {
     /* box-shadow: 0 0 15px #36176d; */
-    box-shadow: 0 0 10px #2e0772;
+    box-shadow: 0 0 5px #2813a0;
 }
 .neno-button {
-    transition: all 0.3s ease-in-out;
+    transition: all 0.1s ease-in-out;
 }
 .neno-button:hover {
-    box-shadow: 0 0 15px indigo;
+    box-shadow: 0 0 15px 2813a0;
 }
 
 * {
 scroll-behavior: smooth;
 }
+/* skills */
+.main_back {
+    position: absolute;
+    border-radius: 10px;
+    transform: rotate(90deg);
+    width: 25em;
+    height: 25em;
+    background: linear-gradient(150deg, #845ac9, #faf8f8, #2813a0 );
+    z-index: -2;
+    box-shadow: inset 0px 0px 180px 5px #ffffff;
+  }
+  
+  .main {
+    display: flex;
+    flex-wrap: wrap;
+    width: 20em;
+    align-items: center;
+    justify-content: center;
+    z-index: -1;
+    /* background-color: darkblue; */
+  }
+  
+  .card {
+    width: 90px;
+    height: 90px;
+    /* border-top-left-radius: 10px; */
+    background: lightgrey;
+    transition: .4s ease-in-out, .2s background-color ease-in-out, .2s background-image ease-in-out;
+    background: rgba(255, 255, 255, 0.596);
+    backdrop-filter: blur(5px);
+    border: 1px solid transparent;
+    -webkit-backdrop-filter: blur(5px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .card .html {
+    opacity: 0;
+    transition: .2s ease-in-out;
+    fill: #cc39a4;
+  }
+  
+  .card:nth-child(2) {
+    border-radius: 0px;
+  }
+  
+  .card:nth-child(2) .css {
+    opacity: 0;
+    transition: .2s ease-in-out;
+    fill: #03A9F4;
+  }
+/*   
+  .card:nth-child(3) {
+    border-top-right-radius: 10px;
+    border-top-left-radius: 0px;
+  }
+   */
+  .card:nth-child(3) .react {
+    opacity: 0;
+    transition: .2s ease-in-out;
+    fill: #ffb5d2;
+  }
+  
+  .card:nth-child(4) {
+    border-radius: 0px;
+  }
+  
+  .card:nth-child(4) .node {
+    opacity: 0;
+    transition: .2s ease-in-out;
+    fill: black;
+  }
+  
+  .card:nth-child(5) {
+    border-radius: 0px;
+  }
+  
+  .card:nth-child(5) .mongo {
+    position: absolute;
+    margin-left: 0.2em;
+    margin-top: 0.2em;
+    opacity: 0;
+    transition: .2s ease-in-out;
+  }
+  
+  .card:nth-child(6) {
+    border-radius: 0px;
+  }
+  
+  .card:nth-child(6) .bootstrap {
+    opacity: 0;
+    transition: .2s ease-in-out;
+    fill: #8c9eff;
+  }
+  
+  /* .card:nth-child(7) {
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 0px;
+  }
+   */
+  .card:nth-child(7) .tailwind {
+    opacity: 0;
+    transition: .2s ease-in-out;
+    fill: black;
+  }
+  
+  .card:nth-child(8) {
+    border-radius: 0px;
+  }
+  
+  .card:nth-child(8) .sql {
+    opacity: 0;
+    transition: .2s ease-in-out;
+    fill: #29b6f6;
+  }
+  
+  /* .card:nth-child(9) {
+    border-bottom-right-radius: 10px;
+    border-top-left-radius: 0px;
+  } */
+  
+  .card:nth-child(9) .java {
+    opacity: 0;
+    transition: .2s ease-in-out;
+  }
+  
+  .main:hover {
+    width: 20em;
+    cursor: pointer;
+  }
+  
+  .main:hover .main_back {
+    opacity: 0;
+  }
+  
+  .main:hover .card img{
+    width: 80px;
+    height: 80px;
+  }
+  .main:hover .card {
+    margin: .2em;
+    border-radius: 10px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    background: rgba(255, 255, 255, 0.2);
+  }
+  
+  .main:hover .card:nth-child(5) {
+    border: transparent;
+  }
+  
+  .main:hover .text {
+    opacity: 0;
+    z-index: -3;
+  }
+  
+  .main:hover .html {
+    opacity: 1;
+  }
+  
+  .main:hover .css {
+    opacity: 1;
+  }
+  
+  .main:hover .react {
+    opacity: 1;
+  }
+  
+  .main:hover .node {
+    opacity: 1;
+  }
+  
+  .main:hover .mongo {
+    opacity: 1;
+  }
+  
+  .main:hover .bootstrap {
+    opacity: 1;
+  }
+  
+  .main:hover .tailwind {
+    opacity: 1;
+  }
+  
+  .main:hover .sql {
+    opacity: 1;
+  }
+  
+  .main:hover .java {
+    opacity: 1;
+  }
+  
+  .card:nth-child(1):hover {
+    background-color: #cc39a4;
+  }
+  
+  .card:nth-child(1):hover .html {
+    fill: white;
+  }
+  
+  .card:nth-child(2):hover {
+    background-color: #03A9F4;
+  }
+  
+  .card:nth-child(2):hover .css {
+    fill: white;
+  }
+  
+  .card:nth-child(3):hover {
+    background-color: #ffb5d2;
+  }
+  
+  .card:nth-child(3):hover .react {
+    fill: white;
+  }
+  
+  .card:nth-child(4):hover {
+    background-color: #5a69d8;
+  }
+  
+  .card:nth-child(4):hover .node {
+    fill: white;
+  }
+  
+  .card:nth-child(5):hover {
+    animation: backgroundIMG .1s;
+    animation-fill-mode: forwards;
+  }
+  
+  .card:nth-child(5):hover .mongo #paint0_linear_501_142 stop {
+    stop-color: white;
+  }
+  
+  .card:nth-child(5):hover .mongo #paint1_linear_501_142 stop {
+    stop-color: white;
+  }
+  
+  .card:nth-child(5):hover .mongo #paint2_linear_501_142 stop {
+    stop-color: white;
+  }
+  
+  @keyframes backgroundIMG {
+    100% {
+      background-image: linear-gradient(#BF66FF,#6248FF,#00DDEB);
+    }
+  }
+  
+  .card:nth-child(6):hover {
+    background-color: #8c9eff;
+  }
+  
+  .card:nth-child(6):hover .bootstrap {
+    fill: white;
+  }
+  
+  .card:nth-child(7):hover {
+    background-color: rgb(111, 151, 117);
+  }
+  
+  .card:nth-child(7):hover .tailwind {
+    fill: white;
+  }
+  
+  .card:nth-child(8):hover {
+    background-color: #29b6f6;
+  }
+  
+  .card:nth-child(8):hover .sql > path:nth-of-type(1) {
+    fill: white;
+  }
+  
+  .card:nth-child(8):hover .sql > path:nth-of-type(2) {
+    fill: #29b6f6;
+  }
+  
+  .card:nth-child(8):hover .sql > path:nth-of-type(3) {
+    fill: #29b6f6;
+  }
+  
+  .card:nth-child(9):hover {
+    background-color: rgb(255,69,0);
+  }
+  
+  .card:nth-child(9) .java > g circle {
+    fill: rgb(255,69,0);
+  }
+  
+  .card:nth-child(9) .java > g path {
+    fill: white;
+  }
+  
+  .text {
+    position: absolute;
+    font-size: 0.7em;
+    transition: .4s ease-in-out;
+    color: black;
+    text-align: center;
+    font-weight: bold;
+    letter-spacing: 0.33em;
+    z-index: 3;
+  }
+  @media (max-width: 480px) {
+    .main_back {
+        width: 31em;
+        height: 17em;
+      }
+    .main {
+        width: 14em;
+      }
+      .main:hover {
+        width: 14em;
+      }
+  }
